<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/bg_color"
    >

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/wordValue"
        android:id="@+id/textView"
        android:layout_marginTop="39dp"
        android:layout_below="@+id/play"
        android:layout_centerHorizontal="true"
        android:background="#ffffff" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/getWord"
        android:id="@+id/button"
        android:background="#ffffff"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/def"
        android:id="@+id/textView2"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:gravity="center"
        android:background="#ffffff"
        android:textSize="16sp"
        android:scrollIndicators="right"
        android:maxLines="5"
        android:scrollbars="vertical"
        />

    <Button
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/playSound"
        android:id="@+id/play"
        android:textSize="12sp"
        android:layout_below="@+id/editText"
        android:layout_centerHorizontal="true"
        android:background="#ffffff" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Assignments"
        android:id="@+id/def"
        android:layout_above="@+id/button"
        android:layout_marginBottom="62dp"
        android:background="#ffffff"
        />

</RelativeLayout>
